--- a/AppMarcas/MainPage.xaml
+++ b/AppMarcas/MainPage.xaml
@@ -14,10 +14,30 @@
             <Label x:Name="lblMarNome" Text="Nome: "/>
             <Entry x:Name="txtMarNome"/>
 
-            <Label x:Name="lblMarObs" Text="Observaçôes: "/>
-            <Entry x:Name="txtMarObs"/>
 
             <Button x:Name="btnInserir" Text="Inserir" Clicked="btnInserirOnClicked"/>
+
+            <SearchBar x:Name="txtSearch" Placeholder="Digite o nome da marca" TextChanged="txtSearchTextChanged" />
+
+            <ListView x:Name="listMarcas">
+                <ListView.Header>
+                    <Grid ColumnDefinitions="*, *">
+                        <Label Grid.Column="0" Text="ID"/>
+                        <Label Grid.Column="1" Text="Nome"/>
+                    </Grid>
+                </ListView.Header>
+
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid ColumnDefinitions="*, *">
+                                <Label Grid.Column="0" Text="{Binding marId}"/>
+                                <Label Grid.Column="1" Text="{Binding marNome}"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
         </VerticalStackLayout>
     </ScrollView>
